rust-regex-dsl_derive/tests/ui/bad_word.stderr
error: Unknown word: nop
 --> tests/ui/bad_word.rs:5:9
  |
5 |         nop
  |         ^^^
