rust-regex-dsl_derive/tests/ui/bad_word.rs
pub use rust_regex_dsl::regex_dsl;

fn main() {
    let regex = regex_dsl! {
        nop
    };
    println!("{}", regex);
}